--- a/NetCoreCMS.Web/Themes/DefaultDark/wwwroot/css/site.css
+++ b/NetCoreCMS.Web/Themes/DefaultDark/wwwroot/css/site.css
@@ -64,8 +64,9 @@
 }
 
 .mainBody {
-    /*min-height: 100vh;*/
+    min-height: 100vh;
     padding: 0px;
+    word-wrap: break-word;
 }
 
 .fullWidthSlider {
