--- a/NetCoreCMS.Web/Views/SetupHome/CreateAdmin.cshtml
+++ b/NetCoreCMS.Web/Views/SetupHome/CreateAdmin.cshtml
@@ -126,6 +126,7 @@
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-primary">Submit</button>
+                    &nbsp;&nbsp;<a href="~/SetupHome/Back" class="btn btn-danger">Back</a>&nbsp;&nbsp;
                     <button type="reset" class="btn btn-default">Clear</button>
                 </div>
             </div>
