--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -103,45 +103,8 @@
                         </li>*@
                         <li class="active">
                             <a asp-controller="Admin" asp-action="Index"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
-                        </li>
-                        @*<li>
-                            <a href="#"><i class="fa fa-file-text-o fa-fw"></i> Page<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a asp-controller="CmsPage" asp-action="CreateEdit" asp-route-id=""><i class="fa fa-pencil-square-o fa-fw"></i> New Page </a></li>
-                                <li><a asp-controller="CmsPage" asp-action="Manage"><i class="fa fa-th-list fa-fw"></i> Manage </a></li>
-                            </ul>
-                        </li>*@
-                        @*<li>
-                            <a href="#"><i class="fa fa-tasks fa-fw"></i> Appearance<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a asp-controller="CmsMenu" asp-action="Index"><i class="fa fa-list fa-fw"></i> Menu </a></li>
-                                <li><a asp-controller="CmsWidget" asp-action="Index"><i class="fa fa-magic fa-fw"></i> Widget </a></li>
-                                <li><a asp-controller="CmsTheme" asp-action="Index"><i class="fa fa-laptop fa-fw"></i> Theme </a></li>  
-                            </ul>
-                        </li>*@
-                        @*<li>
-                            <a href="#"><i class="fa fa-th-large fa-fw"></i> Module<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a asp-controller="CmsModule" asp-action="Install"><i class="fa fa-pencil-square-o fa-fw"></i> Install</a></li>
-                                <li><a asp-controller="CmsModule" asp-action="Create"><i class="fa fa-pencil-square-o fa-fw"></i> Create New</a></li>
-                                <li><a asp-controller="CmsModule" asp-action="Index"><i class="fa fa-th-list fa-fw"></i> Manage</a></li>
-                            </ul>
-                        </li>*@
-                        @*<li>
-                            <a href="#"><i class="fa fa-users fa-fw"></i> User<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a href="#"><i class="fa fa-pencil-square-o fa-fw"></i> New User</a></li>
-                                <li><a href="#"><i class="fa fa-th-list fa-fw"></i> Manage</a></li>   
-                            </ul>
-                        </li>*@
-                        @*<li>
-                            <a href="#"><i class="fa fa-gears fa-fw"></i> Settings<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a asp-controller="Admin" asp-action="Settings"><i class="fa fa-gear fa-fw"></i> General</a></li>
-                                <li><a href="#"><i class="fa fa-user fa-fw"></i> Profile</a></li>
-                            </ul>
-                        </li>*@ 
-                        @Html.Raw(AdminMenuHelper.GetAdminMenuHtml(AdminMenuHelper.ModulesAdminMenus())); 
+                        </li>                       
+                        @Html.Raw(AdminMenuHelper.GetAdminMenuHtml(AdminMenuHelper.ModulesAdminMenus()))
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
