Deafult theme convert to Simple structure
New theme NccSeventeen included

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
@@ -14,7 +14,7 @@
  
 @section Styles{
     <style>
-       @Html.Raw("        div{            color:green !important;        }");
+       @Html.Raw("        ");
     </style>
 }
 <div class="row">
